<resources>
    <!-- Fcm service -->
    <string name="log_fcm_message_id">"FCM Message Id: "</string>
    <string name="log_fcm_notification_message">"FCM Notification Message: "</string>
    <string name="log_fcm_data">"FCM Data: "</string>
    <string name="log_fcm_data_message">"FCM Data Message: "</string>
    <string name="notification_channel_default">Notifications</string>
    <string name="notification_channel_description_default">Latest Updates</string>

    <!-- Network error messages -->
    <string name="error_unexpected_error">Something went wrong. Please try again later</string>
    <string name="error_bad_connection_try_again">Bad connectivity, please try again</string>
    <string name="error_remote_server_failed">Application server could not respond. Please try later</string>
    <string name="error_paring">Parsing error</string>
    <string name="error_internet_not_connected">Please check your internet connection or try again later.</string>
    <string name="error_device_rooted">This device is rooted. We are not responsible for any kind of data loss and hack. Use it at your own risk!!</string>
    <string name="error_fb_login_failed">Facebook Login failed!!</string>
    <string name="error_session_expired">Session expired.</string>

    <!-- Error messages -->
    <string name="error_not_a_valid_image_file">File is not a valid image.</string>

    <!-- Image Chooser -->
    <string name="text_cancel">Cancel</string>
    <string name="text_camera">Camera</string>
    <string name="text_setting">Settings</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_multiple">Multiple</string>
    <string name="text_choose_image">Choose Image</string>
    <string name="permission_camera_storage_msg">Permissions are required for camera &amp; storage.</string>
    <string name="permission_camera_storage_denied_msg">Permissions denied. Please grant permission for camera &amp; storage in setting.</string>

    <!-- Dialog -->
    <string name="text_retry">Retry</string>
    <string name="text_exit">Exit</string>
    <string name="text_ok">Ok</string>
    <string name="text_proceed">Proceed</string>
    <string name="text_loading">Loading…</string>

    <!-- Sign In and Sign up -->
    <string name="error_invalid_email">Please enter valid email address.</string>
    <string name="error_invalid_name">Please enter valid name.</string>
    <string name="error_invalid_password">Please enter valid password.</string>
    <string name="error_invalid_re_password">Enter valid Re-password.</string>
    <string name="error_match_password">Password does not match.</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_forgot_password">Forgot Password</string>
    <string name="txt_hint_enter_name">Enter Name</string>
    <string name="txt_hint_enter_email_id">Enter Email ID</string>
    <string name="txt_hint_enter_password">Password</string>
    <string name="txt_hint_re_enter_password">Re-enter Password</string>
    <string name="text_start_tutorial_msg">Welcome to MVP Base Project.
        \n\n<b>1.</b> Change applicationId in app gradle.
        \n<b>2.</b> Change app name from app gradle.
        \n<b>3.</b> Replace google-services.json file.
    </string>


</resources>
