<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:hint="@string/txt_hint_enter_email_id"
        android:inputType="textEmailAddress" />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:hint="@string/txt_hint_enter_name"
        android:inputType="textPersonName" />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:hint="@string/txt_hint_enter_password"
        android:inputType="textPassword" />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/etRePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:hint="@string/txt_hint_re_enter_password"
        android:inputType="textPassword" />





    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        style="@style/primary_button"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/txt_sign_up" />

</LinearLayout>